Import scss e fonts

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Riccardo Basso">
-  <link rel="icon" type="image/svg+xml" href="/Icon.png" />
-  <title>Titolo</title>
+  <link rel="icon" type="image/svg+xml" href="/dc-logo.png" />
+  <title>DC - The Official Home of DC</title>
 </head>
 
 <body>
